tests/samples/negative/types/tuple_literal_infer_invalid.ax
module tuple_literal_infer_invalid;

fn main() -> i32 {
    let value = (null,);
    return 0;
}
